fixed equal sign layout bug

--- a/Main_Folder/MY_PROJECTS/calculator/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/calculator/src/App.scss
@@ -7,6 +7,10 @@ eq-height{
   max-height:min-content
 }
 
+.h-20{
+  height:20%;
+}
+
 
 /* .App-logo {
   height: 40vmin;
